--- a/package.json
+++ b/package.json
@@ -2,38 +2,29 @@
   "name": "bike-app",
   "version": "1.0.0",
   "description": "",
-  "main": "google_maps.js",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
     "url": "git+https://pickleraline@bitbucket.org/pickleraline/bike-app.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Aline Pickler",
   "license": "ISC",
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-2"
-    ]
-  },
   "homepage": "https://bitbucket.org/pickleraline/bike-app#readme",
+  "dependencies": {
+    "google-map-react": "^0.24.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "react-hot-loader": "^1.3.1",
-    "webpack": "^3.3.0",
+    "html-webpack-plugin": "^2.29.0",
+    "webpack": "^3.4.0",
     "webpack-dev-server": "^2.6.1"
-  },
-  "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
   }
 }
